kubernetes-networks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "homework.otus"
      http:
        paths:
          - path: /homepage
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /index
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
